@@ -1,3 +1,7 @@
+2004-07-17  Bruno coudoin  <bruno.coudoin@free.fr>
+
+	* src/boards/python/anim.py: updated by Yves Combe. Loading svg can now be completed.
+
 2004-07-16  Bruno coudoin  <bruno.coudoin@free.fr>
 
 	* src/gcompris/file_selector.c: (gcompris_file_selector_save),
